# Tabble

./: .gitignore  README.md  check_firewall.py  fix_selection_offers.py  get_ip.py  init_db.py  main.py  pyproject.toml  requirements.txt  run.py  tabble.db  tabble_new.db  test_order.py
app/: database.py  main.py
app/models/: dish.py  order.py
app/routers/: admin.py  analytics.py  chef.py  customer.py  feedback.py  loyalty.py  selection_offer.py  settings.py  table.py
app/utils/: pdf_generator.py
